--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "offchain-tx"
   ],
   "author": "Amit Shah",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
